agregados los gift

--- a/mascotas-p1.html
+++ b/mascotas-p1.html
@@ -72,7 +72,7 @@
     				                      <label for="Gato"><img src="img/cat-gris.png" class="icon-gato" alt=""><p class="text-center mt10">Gato</p></label>
                            			</div>
                            		</div>
-                           </div> 
+                           </div>   
                         </div><!-- .col-xs-12 -->
                     </div><!-- .row -->
                     <!-- selecciona tipo de mascota -->
@@ -132,7 +132,7 @@
                     <div class="row declaracion">
                         <div class="col-xs-12 col-sm-12 col-md-6">
                             <div class="row">
-                                <div class="col-xs-12">
+                                <div class="col-xs-12"><!-- #333 opacidad 80% en los tooltip-->
                                     <p class="sura-parrafo">Selecciona su tamaño*</p>
                                 </div>
                                 <div class="col-xs-4 estructura-icon-cont">
@@ -185,7 +185,7 @@
                     <!-- detalle de tu Mascota -->
               
                     <!-- botones -->
-                    <div class="row sura-margin-row">
+                    <div class="row sura-margin-row"><!-- cambiar a gift y  darle mas padding footer distancia de footer 80px -->
                         <div class="alert hidden">
                             <div class="alert alert-danger" role="alert">
                                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
