--- a/mascotas-p3.html
+++ b/mascotas-p3.html
@@ -167,7 +167,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="alert mg0">
                         <div class="alert alert-danger" role="alert">
                             <!--span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span-->
-                            <span class="sr-only">Error:</span>
+                            <span class="sr-only">Error:</span><!-- centrar campos por completar-->
                             <strong>Faltan campos por completar.</strong> Podrás encontrar en rojo los campos que debes corregir.
                         </div>
                     </div>
