--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -36,7 +36,7 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 relative valorcuota">
                             <h1 class="sura-subtitulo bold text-left">Valor Cuota</h1>
-                            <img src="img/pay.png" alt="" class="absolute icon-right">
+                            <img   style="top: 30px;" src="img/pay.png" alt="" class="absolute icon-right">
                             <h2><strong>$6.990 CLP</strong></h2>
                             <h5>0,2592 UF</h5>
                             <h2><strong>Fecha primer vencimiento</strong></h2>
