agregados los gift de paso 2 y 3

--- a/mascotas-p2.html
+++ b/mascotas-p2.html
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-7 text-center">
-                            <img class="animacion-plan" src="img/animacion-plan.png" alt="sura_corazón" class="pad-t-50 pad-r-100">
+                            <img class="animacion-plan" src="img/casita.gif" alt="sura_corazón" class="pad-t-50 pad-r-100">
                         </div>
                     </div>
                     <!-- banner -->
