--- a/mascotas-p1.html
+++ b/mascotas-p1.html
@@ -196,11 +196,11 @@
                         <div class="col-xs-12 text-center hidden-xs">
                             <a href="" class="btn btn-volver">VOLVER</a>
                             <button class="btn btn-continuar" type="submit" onclick="validatepaso1()">CONTINUAR</button>
-                            <img src="img/cat-animado.png" class="right">
+                            <img src="img/gato1.gif" class="right">
                         </div>
                         <div class="visible-xs">
                             <div class="col-xs-12 text-center" >
-                                <img src="img/cat-animado.png">
+                                <img src="img/gato1.gif">
                             </div>
                             <div class="col-xs-12 text-center" >
                                 <a href="" class="btn btn-volver">VOLVER</a>
