--- a/mascotas-p3.html
+++ b/mascotas-p3.html
@@ -176,11 +176,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     
                   </div>
                   <div class="col-xs-12 col-sm-2 col-md-2 hidden-xs">
-                        <img src="/img/poodle.png" class="right">
+                        <img src="/img/perro1.gif" class="right">
                   </div>
                 <div class="visible-xs">
                     <div class="col-xs-12 text-center" >
-                        <img src="img/poodle.png">
+                        <img src="img/perro1.gif">
                     </div>
                     <div class="col-xs-12 text-center" >
                         <a href="" class="btn btn-volver">VOLVER</a>
