--- a/mascotas-p4.html
+++ b/mascotas-p4.html
@@ -78,12 +78,12 @@
                   </div>
 
                   <div class="col-md-2 hidden-xs">
-                        <img src="img/dog-animado.png" class="right">
+                        <img src="img/perro2.gif" class="right">
                   </div>
                   
                   <div class="visible-xs">
                     <div class="col-xs-12 text-center" >
-                        <img src="img/dog-animado.png">
+                        <img src="img/perro2.gif">
                     </div>
                     <div class="col-xs-12 text-center" >
                         <a href="" class="btn btn-volver">VOLVER</a>
