agregado las distancias en paso 1

--- a/mascotas-p1.html
+++ b/mascotas-p1.html
@@ -63,11 +63,11 @@
                            			</div>
                            		</div-->
                            		<div class="row pad-t-10">
-                           			<div class="col-xs-6 col-sm-3 col-lg-2 radio-buttons">
+                           			<div style="padding: 0; position: relative; top: -35px" class="col-xs-6 col-sm-3 col-lg-2 radio-buttons">
                            				<input type="radio" id="Perro" name="tipo-mascota" value="Perro" onchange="perroGato()">
     				                      <label for="Perro"><img src="img/dog-gris.png" class="icon-perro" alt=""><p class="text-center mt10">Perro</p></label>
                            			</div>
-                           			<div class="col-xs-6 col-sm-3 col-lg-2 radio-buttons">
+                           			<div style="padding: 0; position: relative; top: -35px" class="col-xs-6 col-sm-3 col-lg-2 radio-buttons">
                            				<input type="radio" id="Gato" name="tipo-mascota" value="Gato" onchange="perroGato()">
     				                      <label for="Gato"><img src="img/cat-gris.png" class="icon-gato" alt=""><p class="text-center mt10">Gato</p></label>
                            			</div>
@@ -78,7 +78,7 @@
                     <!-- selecciona tipo de mascota -->
 
                     <!-- detalle de tu Mascota -->
-                    <div class="row home-details">
+                    <div  style="position: relative; top: -70px" class="row home-details">
                         <div class="col-xs-12 col-sm-12 col-md-10">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-7">
