--- a/mascotas-p1.html
+++ b/mascotas-p1.html
@@ -129,7 +129,7 @@
                         </div><!-- .col-xs-12 -->
                     </div><!-- .row -->
                     <!-- detalle de tu Mascota -->
-                    <div class="row declaracion">
+                    <div  style="position: relative; top: -82px " class="row declaracion">
                         <div class="col-xs-12 col-sm-12 col-md-6">
                             <div class="row">
                                 <div class="col-xs-12"><!-- #333 opacidad 80% en los tooltip-->
@@ -193,10 +193,10 @@
                                 Complete todos los campos requeridos
                             </div>
                         </div>
-                        <div class="col-xs-12 text-center hidden-xs">
+                        <div  class="col-xs-12 text-center hidden-xs">
                             <a href="" class="btn btn-volver">VOLVER</a>
                             <button class="btn btn-continuar" type="submit" onclick="validatepaso1()">CONTINUAR</button>
-                            <img src="img/gato1.gif" class="right">
+                            <img  style="position:relative; top: -84px" src="img/gato1.gif" class="right">
                         </div>
                         <div class="visible-xs">
                             <div class="col-xs-12 text-center" >
