agregado los margenes paso 3

--- a/mascotas-p1.html
+++ b/mascotas-p1.html
@@ -185,7 +185,7 @@
                     <!-- detalle de tu Mascota -->
               
                     <!-- botones -->
-                    <div class="row sura-margin-row"><!-- cambiar a gift y  darle mas padding footer distancia de footer 80px -->
+                    <div  style="position: relative; top: -80px" class="row sura-margin-row"><!-- cambiar a gift y  darle mas padding footer distancia de footer 80px -->
                         <div class="alert hidden">
                             <div class="alert alert-danger" role="alert">
                                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
