agregado los botones en mascotas paso 3

--- a/mascotas-p3.html
+++ b/mascotas-p3.html
@@ -171,8 +171,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <strong>Faltan campos por completar.</strong> Podrás encontrar en rojo los campos que debes corregir.
                         </div>
                     </div>
-              		<a href="" class="btn btn-volver">VOLVER</a>
-              		<button class="btn btn-continuar" type="submit" onclick="validatepaso2()">CONTINUAR</button>
+              		<a href="" style=" position: relative; left: 80px; " class="btn btn-volver">VOLVER</a>
+              		<button  style=" position: relative; left: 84px; " class="btn btn-continuar" type="submit" onclick="validatepaso2()">CONTINUAR</button>
                     
                   </div>
                   <div style="left: 40px;" class="col-xs-12 col-sm-2 col-md-2 hidden-xs">
@@ -186,7 +186,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a  href="" class="btn btn-volver">VOLVER</a>
                     </div>
                     <div class="col-xs-12 text-center" >
-                        <button  class="btn btn-continuar" type="submit" onclick="validatepaso2()">CONTINUAR</button>
+                        <button   class="btn btn-continuar" type="submit" onclick="validatepaso2()">CONTINUAR</button>
                     </div>
                     
                 </div>
@@ -202,7 +202,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="modal-content">
           <div class="modal-body">
               <div class="row">
-                  <div class="col-xs-12 col-sm-12 col-md-12">
+                  <div  class="col-xs-12 col-sm-12 col-md-12">
                     <h1 class="sura-titulo bold"><img src="img/icon-warning.png" alt="icono-atencion" class="warning-icon">Lo sentimos,</h1>
                     <p class="sura-parrafo bold">Por ahora no tenemos un producto diseñado para tu </br>
                     necesidad.</p>
