agregado el contenedor paso 5

--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -23,7 +23,7 @@
     </header>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="sura-main-container"> <!-- main container -->
+            <div style="max-width: 50%;" class="sura-main-container"> <!-- main container -->
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
@@ -108,10 +108,10 @@
                 <!-- botones -->
                 <div class="row text-center buttons-container text-center">
                         <div class="col-xs-12 col-sm-12 col-md-12">
-                        <a href="Paso-10-exito.html">
-                            <button class="btn btn-accion mb10 sura-boton-contratar"  id="confirm-contract" type="button">CONFIRMAR</button>
+                        <a style=" margin-bottom: 20px" href="Paso-10-exito.html">
+                            <button style="margin-bottom: 20px; " class="btn btn-accion mb10 sura-boton-contratar"  id="confirm-contract" type="button">CONFIRMAR</button>
                         </a>
-                        <a href="Paso1.html" class="otros-datos-a"><p class="txt-14 margin-top-10">Cotizar con otros datos</p></a>
+                        <a  href="Paso1.html" class="otros-datos-a"><p class="txt-14 margin-top-10">Cotizar con otros datos</p></a>
                         </div>
                     </div>
                     <!-- botones -->
