agregado el boton activar nuevo mandato

--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -32,7 +32,7 @@
                 </div>
                 <!-- titulo -->
 
-                <div class="card">
+                <div class="card" >
                     <div class="row" style="position: relative; top: -12px; margin-bottom: -37px;">
                         <div class="col-xs-12 col-sm-12 col-md-12 relative valorcuota">
                             <h1 class="sura-subtitulo bold text-left">Valor Cuota</h1>
@@ -98,7 +98,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row" style="position: relative; top: -180px; left: 100px; margin-top: 10px; ">
                             <div class="col-xs-12 col-sm-12 col-md-3 pad-b-50 pd0">
                                 <button id="activarPat" type="button" class="btn btn-activar-mandato" data-toggle="modal" data-target="#modal-pat">ACTIVAR NUEVO MANDATO</button>
                             </div>
