agregado los detalles de paso 5

--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -23,7 +23,7 @@
     </header>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
-            <div style="max-width: 700px; max-height: 600px" class="sura-main-container"> <!-- main container -->
+            <div style="max-width: 700px; max-height: 670px" class="sura-main-container"> <!-- main container -->
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
@@ -91,20 +91,22 @@
                         <p style="margin-top: -25px; margin-bottom: -50px; position: absolute;" class="sura-parrafo">* Cliente no posee mandatos activos en la compañía.</p>
                     </div>
                         <!-- activar mandato -->
+                        <div  style="position: relative; top: -110px; left: 40px; max-width: 90%;" class="container">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-8 input-mandato  pd0">
+                            <div  class="col-xs-12 col-sm-12 col-md-8 input-mandato  pd0">
                                 <label for="patente" class="form-label">Número de cuotas*</label>
                                 <input class="form-control" placeholder="XXXXXXXXXX" type="text">
                             </div>
                         </div>
 
-                        <div class="row" style="position: relative; top: -180px; left: 100px; margin-top: 10px; ">
+                        <div class="row" >
                             <div class="col-xs-12 col-sm-12 col-md-3 pad-b-50 pd0">
                                 <button id="activarPat" type="button" class="btn btn-activar-mandato" data-toggle="modal" data-target="#modal-pat">ACTIVAR NUEVO MANDATO</button>
                             </div>
                         </div>
                     </form>
                 </div>
+            </div>
 
                 <!-- botones -->
                 <div class="row text-center buttons-container text-center">
