agregado el gift en el modal paso 5

--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -33,7 +33,7 @@
                 <!-- titulo -->
 
                 <div class="card" >
-                    <div class="row" style="position: relative; top: -12px; margin-bottom: -37px;">
+                    <div class="row" style="position: relative; top: -12px; ">
                         <div class="col-xs-12 col-sm-12 col-md-12 relative valorcuota">
                             <h1 class="sura-subtitulo bold text-left">Valor Cuota</h1>
                             <img   style="top: 30px;" src="img/pay.png" alt="" class="absolute icon-right">
@@ -91,13 +91,8 @@
                         <p style="margin-top: -25px; margin-bottom: -50px; position: absolute;" class="sura-parrafo">* Cliente no posee mandatos activos en la compañía.</p>
                     </div>
                         <!-- activar mandato -->
-                        <div  style="position: relative; top: -110px; left: 40px; max-width: 90%;" class="container">
-                        <div class="row">
-                            <div  class="col-xs-12 col-sm-12 col-md-8 input-mandato  pd0">
-                                <label for="patente" class="form-label">Número de cuotas*</label>
-                                <input class="form-control" placeholder="XXXXXXXXXX" type="text">
-                            </div>
-                        </div>
+                        <div  style="position: relative; top: -130px; left: 40px; max-width: 90%;" class="container">
+                       
 
                         <div class="row" >
                             <div class="col-xs-12 col-sm-12 col-md-3 pad-b-50 pd0">
@@ -161,7 +156,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                                <img src="img/modal-exito.png" alt="pat" class="img-responsive manos-icon">
+                                <img src="img/gatoperro1.gif" alt="pat" class="img-responsive manos-icon">
                             </div>
                         </div>
                       </div>        
