--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -139,8 +139,8 @@
                 <div class="modal fade modal-md modal-exito" id="suscripcion-pat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <div style="height: 40px;">
+                            <button   type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                       <div class="modal-body">
                         <div class="row">
