arreglado el bug de precios y el modal para revision

--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -51,14 +51,14 @@
                         <!-- detalle de pago -->
                         
                         <div s class="row detalle-pago">
-                            <div style="margin-top: -55px;" class="col-xs-6 col-sm-3 col-md-3">
+                            <div style="margin-top: -5px;" class="col-xs-6 col-sm-3 col-md-3">
                                 <div class="precio-titulo">
                                     <p>Precio base:</p>
                                     <p>$6.990 CLP</p>
                                     <p>0,2592 UF</p>
                                 </div>
                             </div>
-                            <div   style="margin-top: -55px;" class="col-xs-6 col-sm-3 col-md-3">
+                            <div   style="margin-top: -5px;" class="col-xs-6 col-sm-3 col-md-3">
                                 <div class="precio-uf">
                                     <p>Precio total:</p>
                                     <p>$6.990 CLP</p>
@@ -88,7 +88,7 @@
                         </div>
 
                         <div style="position: relative; top: -25px" class="row detalle-prima"></div>
-                        <p style="margin-top: -25px; margin-bottom: -50px; position: absolute;" class="sura-parrafo">* Cliente no posee mandatos activos en la compañía.</p>
+                        <p style="margin-top: -25px; margin-bottom: -50px; position: absolute; left: 420px;" class="sura-parrafo">* Cliente no posee mandatos activos en la compañía.</p>
                     </div>
                         <!-- activar mandato -->
                         <div  style="position: relative; top: -130px; left: 40px; max-width: 90%;" class="container">
