--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -143,10 +143,10 @@
                             <button   type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                       <div class="modal-body">
-                        <div class="row">
+                        <div  id="heading-modal" class="row ">
                             <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                                <h3 class="bold txt-18 margin-bottom-20">Suscripción PAT</h3>
-                                <p class="txt-14 margin-bottom-30 text-center">Te has suscrito exitosamente a la modalidad de pago PAT. Tu número de mandato es: xxxxxx</p>
+                                <h3  class="bold txt-18 margin-bottom-20">Suscripción PAT</h3>
+                                <p class="txt-14 margin-bottom-30 ">Te has suscrito exitosamente a la modalidad de pago PAT.<br> Tu número de mandato es: xxxxxx</p>
                             </div>
                         </div>
                         <div class="row">
