agregado los ultimos detalles del modal paso 5

--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -91,12 +91,12 @@
                         <p style="margin-top: -25px; margin-bottom: -50px; position: absolute; left: 420px;" class="sura-parrafo">* Cliente no posee mandatos activos en la compañía.</p>
                     </div>
                         <!-- activar mandato -->
-                        <div  style="position: relative; top: -130px; left: 40px; max-width: 90%;" class="container">
+                        <div   class="container container-mandato">
                        
 
                         <div class="row" >
                             <div class="col-xs-12 col-sm-12 col-md-3 pad-b-50 pd0">
-                                <button id="activarPat" type="button" class="btn btn-activar-mandato" data-toggle="modal" data-target="#modal-pat">ACTIVAR NUEVO MANDATO</button>
+                                <button id="activarPat" type="button" class="btn-activar-mandato" data-toggle="modal" data-target="#modal-pat">ACTIVAR NUEVO MANDATO</button>
                             </div>
                         </div>
                     </form>
