cambios finales paso 5

--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -87,8 +87,8 @@
                             <img src="img/patpass.png" alt="" class="pat-pass-payment-logo absolute img-right">
                         </div>
 
-                        <div style="position: relative; top: -25px" class="row detalle-prima"></div>
-                        <p style="margin-top: -25px; margin-bottom: -50px; position: absolute; left: 420px;" class="sura-parrafo">* Cliente no posee mandatos activos en la compañía.</p>
+                        <div class="row detalle-prima"></div>
+                        <p  class="sura-parrafo sura-parrafo-1">* Cliente no posee mandatos activos en la compañía.</p>
                     </div>
                         <!-- activar mandato -->
                         <div   class="container container-mandato">
